force-app/main/default/objects/VDT_Field_Summary__c/VDT_Field_Summary__c.object-meta.xml
<CustomObject>
    <label>Field Summary</label>
    <nameField>
        <displayFormat>FS-{00000}</displayFormat>
        <label>Field Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>