force-app/main/default/objects/VDT_Field_Summary__c/fields/Country_Usage_Summary__c.field-meta.xml
<CustomField>
    <fullName>Country_Usage_Summary__c</fullName>
    <label>Country Usage Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>