force-app/main/default/objects/VDT_Field_Summary__c/fields/Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Job_Id__c</fullName>
    <externalId>true</externalId>
    <label>Job Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>