force-app/main/default/objects/VDT_Field_Summary__c/fields/Page_Layouts__c.field-meta.xml
<CustomField>
    <fullName>Page_Layouts__c</fullName>
    <label>Page Layouts</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>