force-app/main/default/objects/VDT_Field_Summary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Job_Id__c</columns>
    <columns>Name__c</columns>
    <columns>Label__c</columns>
    <columns>Type__c</columns>
    <columns>Page_Layouts__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>